tests/pass/registering/reflexive coercion.mm0
sort s;
coercion c: s > s;
