tests/fail/registering/duplicated ids for sorts.mm0
    sort s ; 
pure     sort s ; 
